fixed contact section and form label alignment

--- a/index.css
+++ b/index.css
@@ -293,18 +293,16 @@ nav ul li a:hover {
   flex-wrap: wrap;
 }
 
-.info-card {
-  background-color: #191414; /* dark */
+
+/*.info-card {
+  background-color: #191414; dark
   color: #ccc;
   padding: 25px 40px;
   border-radius: 15px;
   box-shadow: 0 5px 15px rgba(0,0,0,0.7);
   min-width: 200px;
-}
+}*/
 
-.info-card.glow {
-  box-shadow: 0 0 15px 5px rgba(29, 215, 96, 0.7);
-}
 
 form {
   background-color: #191414; /* dark */
@@ -333,6 +331,7 @@ form.glow {
 .info-card h2 {
   margin-bottom: 10px;
   font-size: 1.5rem;
+  color: #14833b;
 }
 
 .info-card p {
@@ -361,7 +360,7 @@ label {
   flex: 1 0 120px;
   font-weight: 700;
   color: #1DB954;
-  align-self: center;
+  align-self: left;
 }
 
 input[type="text"],
